--- a/starwars/package.json
+++ b/starwars/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "styled-components": "^4.4.0"
+    "react": "^16.8.6",
+    "react-axios": "^2.0.3",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
